force-app/main/default/objects/Web_Data__c/Web_Data__c.object-meta.xml
<CustomObject>
    <label>Web Data</label>
    <nameField>
        <label>Web Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>