force-app/main/default/objects/Web_Data__c/fields/ABcompany__c.field-meta.xml
<CustomField>
    <fullName>ABcompany__c</fullName>
    <description>Company Name on Announcement Bands</description>
    <inlineHelpText>Company Name on Announcement Bands</inlineHelpText>
    <label>ABcompany</label>
    <length>200</length>
    <type>Text</type>
</CustomField>