force-app/main/default/objects/Web_Data__c/fields/ABdisclosure__c.field-meta.xml
<CustomField>
    <fullName>ABdisclosure__c</fullName>
    <description>Disclosure for announcement band</description>
    <label>ABdisclosure</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>