force-app/main/default/objects/Web_Data__c/fields/ABemail__c.field-meta.xml
<CustomField>
    <fullName>ABemail__c</fullName>
    <description>email on announcement bands</description>
    <inlineHelpText>email on announcement bands</inlineHelpText>
    <label>ABemail</label>
    <type>TextArea</type>
</CustomField>