force-app/main/default/objects/Web_Data__c/fields/ABlogo__c.field-meta.xml
<CustomField>
    <fullName>ABlogo__c</fullName>
    <description>logo on announcement bands</description>
    <inlineHelpText>logo on announcement bands</inlineHelpText>
    <label>ABlogo</label>
    <type>Url</type>
</CustomField>