force-app/main/default/objects/Web_Data__c/fields/ABname__c.field-meta.xml
<CustomField>
    <fullName>ABname__c</fullName>
    <description>Announcement Band Name</description>
    <inlineHelpText>Name on Announcement Band (magazine cover band)</inlineHelpText>
    <label>ABname</label>
    <length>200</length>
    <type>Text</type>
</CustomField>