force-app/main/default/objects/Web_Data__c/fields/ABphone__c.field-meta.xml
<CustomField>
    <fullName>ABphone__c</fullName>
    <description>main phone number on announcement bands</description>
    <inlineHelpText>main phone number on announcement bands</inlineHelpText>
    <label>ABphone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>