force-app/main/default/objects/Web_Data__c/fields/ABphoto__c.field-meta.xml
<CustomField>
    <fullName>ABphoto__c</fullName>
    <description>photo for announcement bands</description>
    <inlineHelpText>photo for announcement bands</inlineHelpText>
    <label>ABphoto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>