force-app/main/default/objects/Web_Data__c/fields/ABwebsite__c.field-meta.xml
<CustomField>
    <fullName>ABwebsite__c</fullName>
    <description>website on Announcement Bands</description>
    <inlineHelpText>website on Announcement Bands</inlineHelpText>
    <label>ABwebsite</label>
    <length>100</length>
    <type>Text</type>
</CustomField>