force-app/main/default/objects/Web_Data__c/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <description>April choice for e-newsletter</description>
    <inlineHelpText>April choice for e-newsletter</inlineHelpText>
    <label>April</label>
    <length>255</length>
    <type>Text</type>
</CustomField>