force-app/main/default/objects/Web_Data__c/fields/ASemailcsv__c.field-meta.xml
<CustomField>
    <fullName>ASemailcsv__c</fullName>
    <label>ASemails(csv)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>