force-app/main/default/objects/Web_Data__c/fields/ASemails_copy_paste__c.field-meta.xml
<CustomField>
    <fullName>ASemails_copy_paste__c</fullName>
    <label>ASemails(copy/paste)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>