force-app/main/default/objects/Web_Data__c/fields/ASfb__c.field-meta.xml
<CustomField>
    <fullName>ASfb__c</fullName>
    <label>ASfb</label>
    <length>250</length>
    <type>Text</type>
</CustomField>