force-app/main/default/objects/Web_Data__c/fields/ASli__c.field-meta.xml
<CustomField>
    <fullName>ASli__c</fullName>
    <label>ASli</label>
    <length>250</length>
    <type>Text</type>
</CustomField>