force-app/main/default/objects/Web_Data__c/fields/ASname__c.field-meta.xml
<CustomField>
    <fullName>ASname__c</fullName>
    <label>ASname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>