force-app/main/default/objects/Web_Data__c/fields/ASplatform__c.field-meta.xml
<CustomField>
    <fullName>ASplatform__c</fullName>
    <label>ASplatform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>