force-app/main/default/objects/Web_Data__c/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <description>August choice for e-newsletter</description>
    <inlineHelpText>August choice for e-newsletter</inlineHelpText>
    <label>August</label>
    <length>255</length>
    <type>Text</type>
</CustomField>