force-app/main/default/objects/Web_Data__c/fields/BROadd__c.field-meta.xml
<CustomField>
    <fullName>BROadd__c</fullName>
    <label>BROadd</label>
    <length>250</length>
    <type>Text</type>
</CustomField>