force-app/main/default/objects/Web_Data__c/fields/BROaltph__c.field-meta.xml
<CustomField>
    <fullName>BROaltph__c</fullName>
    <label>BROaltph</label>
    <length>250</length>
    <type>Text</type>
</CustomField>