force-app/main/default/objects/Web_Data__c/fields/BROb10__c.field-meta.xml
<CustomField>
    <fullName>BROb10__c</fullName>
    <label>BROb10</label>
    <length>250</length>
    <type>Text</type>
</CustomField>