force-app/main/default/objects/Web_Data__c/fields/BROb1__c.field-meta.xml
<CustomField>
    <fullName>BROb1__c</fullName>
    <label>BROb1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>