force-app/main/default/objects/Web_Data__c/fields/BROb2__c.field-meta.xml
<CustomField>
    <fullName>BROb2__c</fullName>
    <label>BROb2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>