force-app/main/default/objects/Web_Data__c/fields/BROcap1__c.field-meta.xml
<CustomField>
    <fullName>BROcap1__c</fullName>
    <label>BROcap1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>