force-app/main/default/objects/Web_Data__c/fields/BROcap2__c.field-meta.xml
<CustomField>
    <fullName>BROcap2__c</fullName>
    <label>BROcap2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>