force-app/main/default/objects/Web_Data__c/fields/BROcap3__c.field-meta.xml
<CustomField>
    <fullName>BROcap3__c</fullName>
    <label>BROcap3</label>
    <length>250</length>
    <type>Text</type>
</CustomField>