force-app/main/default/objects/Web_Data__c/fields/BROcity__c.field-meta.xml
<CustomField>
    <fullName>BROcity__c</fullName>
    <label>BROcity</label>
    <length>250</length>
    <type>Text</type>
</CustomField>