force-app/main/default/objects/Web_Data__c/fields/BROco__c.field-meta.xml
<CustomField>
    <fullName>BROco__c</fullName>
    <label>BROco</label>
    <length>250</length>
    <type>Text</type>
</CustomField>