force-app/main/default/objects/Web_Data__c/fields/BROcopy__c.field-meta.xml
<CustomField>
    <fullName>BROcopy__c</fullName>
    <label>BROcopy</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>