force-app/main/default/objects/Web_Data__c/fields/BROdisc__c.field-meta.xml
<CustomField>
    <fullName>BROdisc__c</fullName>
    <label>BROdisc</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>