force-app/main/default/objects/Web_Data__c/fields/BROemail__c.field-meta.xml
<CustomField>
    <fullName>BROemail__c</fullName>
    <label>BROemail</label>
    <length>250</length>
    <type>Text</type>
</CustomField>