force-app/main/default/objects/Web_Data__c/fields/BROlic__c.field-meta.xml
<CustomField>
    <fullName>BROlic__c</fullName>
    <label>BROlic</label>
    <length>250</length>
    <type>Text</type>
</CustomField>