force-app/main/default/objects/Web_Data__c/fields/BROlogo__c.field-meta.xml
<CustomField>
    <fullName>BROlogo__c</fullName>
    <label>BROlogo</label>
    <type>Url</type>
</CustomField>