force-app/main/default/objects/Web_Data__c/fields/BROname__c.field-meta.xml
<CustomField>
    <fullName>BROname__c</fullName>
    <label>BROname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>