force-app/main/default/objects/Web_Data__c/fields/BROphone__c.field-meta.xml
<CustomField>
    <fullName>BROphone__c</fullName>
    <label>BROphone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>