force-app/main/default/objects/Web_Data__c/fields/BROphoto__c.field-meta.xml
<CustomField>
    <fullName>BROphoto__c</fullName>
    <label>BROphoto</label>
    <type>Url</type>
</CustomField>