force-app/main/default/objects/Web_Data__c/fields/BROst__c.field-meta.xml
<CustomField>
    <fullName>BROst__c</fullName>
    <label>BROst</label>
    <length>250</length>
    <type>Text</type>
</CustomField>