force-app/main/default/objects/Web_Data__c/fields/BROsub1__c.field-meta.xml
<CustomField>
    <fullName>BROsub1__c</fullName>
    <label>BROsub1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>