force-app/main/default/objects/Web_Data__c/fields/BROsub2__c.field-meta.xml
<CustomField>
    <fullName>BROsub2__c</fullName>
    <label>BROsub2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>