force-app/main/default/objects/Web_Data__c/fields/BROtitle__c.field-meta.xml
<CustomField>
    <fullName>BROtitle__c</fullName>
    <label>BROtitle</label>
    <length>250</length>
    <type>Text</type>
</CustomField>