force-app/main/default/objects/Web_Data__c/fields/BROweb__c.field-meta.xml
<CustomField>
    <fullName>BROweb__c</fullName>
    <label>BROweb</label>
    <length>250</length>
    <type>Text</type>
</CustomField>