force-app/main/default/objects/Web_Data__c/fields/BROzip__c.field-meta.xml
<CustomField>
    <fullName>BROzip__c</fullName>
    <label>BROzip</label>
    <length>250</length>
    <type>Text</type>
</CustomField>