force-app/main/default/objects/Web_Data__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>e-magazine accent color</description>
    <inlineHelpText>e-magazine accent color</inlineHelpText>
    <label>Color</label>
    <length>155</length>
    <type>Text</type>
</CustomField>