force-app/main/default/objects/Web_Data__c/fields/CSemail__c.field-meta.xml
<CustomField>
    <fullName>CSemail__c</fullName>
    <label>CSemail</label>
    <type>Url</type>
</CustomField>