force-app/main/default/objects/Web_Data__c/fields/DAco__c.field-meta.xml
<CustomField>
    <fullName>DAco__c</fullName>
    <label>DAco</label>
    <length>250</length>
    <type>Text</type>
</CustomField>