force-app/main/default/objects/Web_Data__c/fields/DAname__c.field-meta.xml
<CustomField>
    <fullName>DAname__c</fullName>
    <label>DAname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>