force-app/main/default/objects/Web_Data__c/fields/DAtitle__c.field-meta.xml
<CustomField>
    <fullName>DAtitle__c</fullName>
    <label>DAtitle</label>
    <length>250</length>
    <type>Text</type>
</CustomField>