force-app/main/default/objects/Web_Data__c/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <description>December choice for e-newsletter</description>
    <inlineHelpText>December choice for e-newsletter</inlineHelpText>
    <label>December</label>
    <length>255</length>
    <type>Text</type>
</CustomField>