force-app/main/default/objects/Web_Data__c/fields/Digital_Ad_Campaign_Address__c.field-meta.xml
<CustomField>
    <fullName>Digital_Ad_Campaign_Address__c</fullName>
    <label>Digital Ad Campaign Address</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>