force-app/main/default/objects/Web_Data__c/fields/Digital_Ad_Campaign_Photo__c.field-meta.xml
<CustomField>
    <fullName>Digital_Ad_Campaign_Photo__c</fullName>
    <label>Digital Ad Campaign Photo</label>
    <type>Url</type>
</CustomField>