force-app/main/default/objects/Web_Data__c/fields/Digital_Ad_Campaign_Radius__c.field-meta.xml
<CustomField>
    <fullName>Digital_Ad_Campaign_Radius__c</fullName>
    <label>Digital Ad Campaign Radius</label>
    <length>250</length>
    <type>Text</type>
</CustomField>