force-app/main/default/objects/Web_Data__c/fields/Digital_Ad_Campaign_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Digital_Ad_Campaign_Redirect_URL__c</fullName>
    <description>URL digital ads link to</description>
    <inlineHelpText>URL digital ads link to</inlineHelpText>
    <label>Digital Ad Campaign Redirect URL</label>
    <type>Url</type>
</CustomField>