force-app/main/default/objects/Web_Data__c/fields/ELERaddress__c.field-meta.xml
<CustomField>
    <fullName>ELERaddress__c</fullName>
    <label>ELERaddress</label>
    <length>250</length>
    <type>Text</type>
</CustomField>