force-app/main/default/objects/Web_Data__c/fields/ELERcity__c.field-meta.xml
<CustomField>
    <fullName>ELERcity__c</fullName>
    <label>ELERcity</label>
    <length>250</length>
    <type>Text</type>
</CustomField>