force-app/main/default/objects/Web_Data__c/fields/ELERcompany__c.field-meta.xml
<CustomField>
    <fullName>ELERcompany__c</fullName>
    <label>ELERcompany</label>
    <length>250</length>
    <type>Text</type>
</CustomField>