force-app/main/default/objects/Web_Data__c/fields/ELERdisclosure__c.field-meta.xml
<CustomField>
    <fullName>ELERdisclosure__c</fullName>
    <description>Listing E-Reprint Expanded Disclosure</description>
    <inlineHelpText>Listing E-Reprint Expanded Disclosure</inlineHelpText>
    <label>ELERdisclosure</label>
    <type>TextArea</type>
</CustomField>