force-app/main/default/objects/Web_Data__c/fields/ELERemail__c.field-meta.xml
<CustomField>
    <fullName>ELERemail__c</fullName>
    <label>ELERemail</label>
    <length>250</length>
    <type>Text</type>
</CustomField>