force-app/main/default/objects/Web_Data__c/fields/ELERmobile__c.field-meta.xml
<CustomField>
    <fullName>ELERmobile__c</fullName>
    <label>ELERmobile</label>
    <length>250</length>
    <type>Text</type>
</CustomField>