force-app/main/default/objects/Web_Data__c/fields/ELERname__c.field-meta.xml
<CustomField>
    <fullName>ELERname__c</fullName>
    <label>ELERname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>