force-app/main/default/objects/Web_Data__c/fields/ELERphone__c.field-meta.xml
<CustomField>
    <fullName>ELERphone__c</fullName>
    <label>ELERphone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>