force-app/main/default/objects/Web_Data__c/fields/ELERphoto__c.field-meta.xml
<CustomField>
    <fullName>ELERphoto__c</fullName>
    <label>ELERphoto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>