force-app/main/default/objects/Web_Data__c/fields/ELERstate__c.field-meta.xml
<CustomField>
    <fullName>ELERstate__c</fullName>
    <label>ELERstate</label>
    <length>250</length>
    <type>Text</type>
</CustomField>