force-app/main/default/objects/Web_Data__c/fields/ELERtitle__c.field-meta.xml
<CustomField>
    <fullName>ELERtitle__c</fullName>
    <description>Listing E-Reprint Expanded Title</description>
    <inlineHelpText>Listing E-Reprint Expanded Title</inlineHelpText>
    <label>ELERtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>