force-app/main/default/objects/Web_Data__c/fields/ELERweb__c.field-meta.xml
<CustomField>
    <fullName>ELERweb__c</fullName>
    <label>ELERweb</label>
    <length>250</length>
    <type>Text</type>
</CustomField>