force-app/main/default/objects/Web_Data__c/fields/ELERzip__c.field-meta.xml
<CustomField>
    <fullName>ELERzip__c</fullName>
    <label>ELERzip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>