force-app/main/default/objects/Web_Data__c/fields/Email_Service__c.field-meta.xml
<CustomField>
    <fullName>Email_Service__c</fullName>
    <description>E-newsletter Email Preference</description>
    <formula>Text(Fulfillment__r.Email_Announcement_Service__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>E-newsletter Email Preference</inlineHelpText>
    <label>Email Service</label>
    <type>Text</type>
</CustomField>