force-app/main/default/objects/Web_Data__c/fields/ENL_Company__c.field-meta.xml
<CustomField>
    <fullName>ENL_Company__c</fullName>
    <description>e-newsletter company</description>
    <inlineHelpText>e-newsletter company</inlineHelpText>
    <label>ENL Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>