force-app/main/default/objects/Web_Data__c/fields/ENL_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>ENL_Disclosure__c</fullName>
    <description>E-Newsletter Disclosure</description>
    <label>ENL Disclosure</label>
    <type>TextArea</type>
</CustomField>