force-app/main/default/objects/Web_Data__c/fields/ENL_Email__c.field-meta.xml
<CustomField>
    <fullName>ENL_Email__c</fullName>
    <description>e-newsletter email address</description>
    <inlineHelpText>e-newsletter email address</inlineHelpText>
    <label>ENL Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>