force-app/main/default/objects/Web_Data__c/fields/ENL_List__c.field-meta.xml
<CustomField>
    <fullName>ENL_List__c</fullName>
    <description>e-newsletter email list</description>
    <inlineHelpText>e-newsletter email list</inlineHelpText>
    <label>ENL List</label>
    <type>Url</type>
</CustomField>