force-app/main/default/objects/Web_Data__c/fields/ENL_Logo__c.field-meta.xml
<CustomField>
    <fullName>ENL_Logo__c</fullName>
    <description>e-newsletter logo</description>
    <inlineHelpText>e-newsletter logo</inlineHelpText>
    <label>ENL Logo</label>
    <type>Url</type>
</CustomField>