force-app/main/default/objects/Web_Data__c/fields/ENL_Name__c.field-meta.xml
<CustomField>
    <fullName>ENL_Name__c</fullName>
    <description>e-newsletter name</description>
    <inlineHelpText>e-newsletter name</inlineHelpText>
    <label>ENL Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>