force-app/main/default/objects/Web_Data__c/fields/ENL_Phone__c.field-meta.xml
<CustomField>
    <fullName>ENL_Phone__c</fullName>
    <description>e-newsletter phone</description>
    <inlineHelpText>e-newsletter phone</inlineHelpText>
    <label>ENL Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>