force-app/main/default/objects/Web_Data__c/fields/ENL_Photo__c.field-meta.xml
<CustomField>
    <fullName>ENL_Photo__c</fullName>
    <description>e-newsletter photo</description>
    <inlineHelpText>e-newsletter photo</inlineHelpText>
    <label>ENL Photo</label>
    <type>Url</type>
</CustomField>