force-app/main/default/objects/Web_Data__c/fields/ENL_Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>ENL_Sender_Email__c</fullName>
    <description>e-newsletter sender email</description>
    <inlineHelpText>e-newsletter sender email</inlineHelpText>
    <label>ENL Sender Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>