force-app/main/default/objects/Web_Data__c/fields/ENL_Style__c.field-meta.xml
<CustomField>
    <fullName>ENL_Style__c</fullName>
    <description>e-newsletter style</description>
    <inlineHelpText>e-newsletter style</inlineHelpText>
    <label>ENL Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>