force-app/main/default/objects/Web_Data__c/fields/ENL_Website__c.field-meta.xml
<CustomField>
    <fullName>ENL_Website__c</fullName>
    <description>e-newsletter website</description>
    <inlineHelpText>e-newsletter website</inlineHelpText>
    <label>ENL Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>