force-app/main/default/objects/Web_Data__c/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <description>February choice for e-newsletter</description>
    <inlineHelpText>February choice for e-newsletter</inlineHelpText>
    <label>February</label>
    <length>255</length>
    <type>Text</type>
</CustomField>