force-app/main/default/objects/Web_Data__c/fields/GSAddress1__c.field-meta.xml
<CustomField>
    <fullName>GSAddress1__c</fullName>
    <description>Gift Subscription Address 1</description>
    <inlineHelpText>Gift Subscription Address 1</inlineHelpText>
    <label>GSAddress1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>