force-app/main/default/objects/Web_Data__c/fields/GSAddress2__c.field-meta.xml
<CustomField>
    <fullName>GSAddress2__c</fullName>
    <description>Address 2 for gift subscription</description>
    <inlineHelpText>Address 2 for gift subscription</inlineHelpText>
    <label>GSAddress2</label>
    <length>155</length>
    <type>Text</type>
</CustomField>