force-app/main/default/objects/Web_Data__c/fields/GSCity__c.field-meta.xml
<CustomField>
    <fullName>GSCity__c</fullName>
    <description>Gift Subscription City</description>
    <inlineHelpText>Gift Subscription City</inlineHelpText>
    <label>GSCity</label>
    <length>155</length>
    <type>Text</type>
</CustomField>