force-app/main/default/objects/Web_Data__c/fields/GSDelivery__c.field-meta.xml
<CustomField>
    <fullName>GSDelivery__c</fullName>
    <description>How does our client want the gift/thank you subscription delivered?</description>
    <inlineHelpText>How does our client want the gift/thank you subscription delivered?</inlineHelpText>
    <label>GSDelivery</label>
    <length>155</length>
    <type>Text</type>
</CustomField>