force-app/main/default/objects/Web_Data__c/fields/GSEmail__c.field-meta.xml
<CustomField>
    <fullName>GSEmail__c</fullName>
    <description>Gift Subscription Email</description>
    <inlineHelpText>Gift Subscription Email</inlineHelpText>
    <label>GSEmail</label>
    <length>155</length>
    <type>Text</type>
</CustomField>