force-app/main/default/objects/Web_Data__c/fields/GSname__c.field-meta.xml
<CustomField>
    <fullName>GSname__c</fullName>
    <description>Gift Subscriber Name</description>
    <inlineHelpText>Gift Subscriber Name</inlineHelpText>
    <label>GSname</label>
    <length>200</length>
    <type>Text</type>
</CustomField>