force-app/main/default/objects/Web_Data__c/fields/GSPhone__c.field-meta.xml
<CustomField>
    <fullName>GSPhone__c</fullName>
    <description>Gift Subscription Phone</description>
    <inlineHelpText>Gift Subscription Phone</inlineHelpText>
    <label>GSPhone</label>
    <length>155</length>
    <type>Text</type>
</CustomField>