force-app/main/default/objects/Web_Data__c/fields/GSState__c.field-meta.xml
<CustomField>
    <fullName>GSState__c</fullName>
    <description>Gift Subscription State</description>
    <inlineHelpText>Gift Subscription State</inlineHelpText>
    <label>GSState</label>
    <length>155</length>
    <type>Text</type>
</CustomField>