force-app/main/default/objects/Web_Data__c/fields/GSZip__c.field-meta.xml
<CustomField>
    <fullName>GSZip__c</fullName>
    <description>Gift Subscription Zip Code</description>
    <inlineHelpText>Gift Subscription Zip Code</inlineHelpText>
    <label>GSZip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>