force-app/main/default/objects/Web_Data__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <description>January choice for E-Newsletter</description>
    <inlineHelpText>January choice for E-Newsletter</inlineHelpText>
    <label>January</label>
    <length>255</length>
    <type>Text</type>
</CustomField>