force-app/main/default/objects/Web_Data__c/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <description>July choice for e-newsletter</description>
    <inlineHelpText>July choice for e-newsletter</inlineHelpText>
    <label>July</label>
    <length>255</length>
    <type>Text</type>
</CustomField>