force-app/main/default/objects/Web_Data__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <description>June choice for e-newsletter</description>
    <inlineHelpText>June choice for e-newsletter</inlineHelpText>
    <label>June</label>
    <length>255</length>
    <type>Text</type>
</CustomField>