force-app/main/default/objects/Web_Data__c/fields/MAGaof__c.field-meta.xml
<CustomField>
    <fullName>MAGaof__c</fullName>
    <label>MAGaof</label>
    <length>250</length>
    <type>Text</type>
</CustomField>