force-app/main/default/objects/Web_Data__c/fields/MAGco__c.field-meta.xml
<CustomField>
    <fullName>MAGco__c</fullName>
    <label>MAGco</label>
    <length>250</length>
    <type>Text</type>
</CustomField>