force-app/main/default/objects/Web_Data__c/fields/MAGname__c.field-meta.xml
<CustomField>
    <fullName>MAGname__c</fullName>
    <label>MAGname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>