force-app/main/default/objects/Web_Data__c/fields/March__c.field-meta.xml
<CustomField>
    <fullName>March__c</fullName>
    <description>March choice for e-newsletter</description>
    <inlineHelpText>March choice for e-newsletter</inlineHelpText>
    <label>March</label>
    <length>255</length>
    <type>Text</type>
</CustomField>