force-app/main/default/objects/Web_Data__c/fields/Market_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Upload_Date__c</fullName>
    <formula>Fulfillment__r.Market_Final_Upload__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Upload Date</label>
    <type>Date</type>
</CustomField>