force-app/main/default/objects/Web_Data__c/fields/Marketing_permission__c.field-meta.xml
<CustomField>
    <fullName>Marketing_permission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing permission?</label>
    <type>Checkbox</type>
</CustomField>