force-app/main/default/objects/Web_Data__c/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <description>May choice for e-newsletter</description>
    <inlineHelpText>May choice for e-newsletter</inlineHelpText>
    <label>May</label>
    <length>255</length>
    <type>Text</type>
</CustomField>