force-app/main/default/objects/Web_Data__c/fields/Notes_for_designer__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_designer__c</fullName>
    <label>Notes for designer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>