force-app/main/default/objects/Web_Data__c/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <description>November choice for e-newsletter</description>
    <inlineHelpText>November choice for e-newsletter</inlineHelpText>
    <label>November</label>
    <length>255</length>
    <type>Text</type>
</CustomField>