force-app/main/default/objects/Web_Data__c/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <description>October choice for e-newsletter</description>
    <inlineHelpText>October choice for e-newsletter</inlineHelpText>
    <label>October</label>
    <length>255</length>
    <type>Text</type>
</CustomField>