force-app/main/default/objects/Web_Data__c/fields/PCadd__c.field-meta.xml
<CustomField>
    <fullName>PCadd__c</fullName>
    <label>PCadd</label>
    <length>250</length>
    <type>Text</type>
</CustomField>