force-app/main/default/objects/Web_Data__c/fields/PCaltph__c.field-meta.xml
<CustomField>
    <fullName>PCaltph__c</fullName>
    <label>PCaltph</label>
    <length>250</length>
    <type>Text</type>
</CustomField>