force-app/main/default/objects/Web_Data__c/fields/PCcap__c.field-meta.xml
<CustomField>
    <fullName>PCcap__c</fullName>
    <label>PCcap</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>