force-app/main/default/objects/Web_Data__c/fields/PCcity__c.field-meta.xml
<CustomField>
    <fullName>PCcity__c</fullName>
    <label>PCcity</label>
    <length>250</length>
    <type>Text</type>
</CustomField>