force-app/main/default/objects/Web_Data__c/fields/PCco__c.field-meta.xml
<CustomField>
    <fullName>PCco__c</fullName>
    <label>PCco</label>
    <length>250</length>
    <type>Text</type>
</CustomField>