force-app/main/default/objects/Web_Data__c/fields/PCdisc__c.field-meta.xml
<CustomField>
    <fullName>PCdisc__c</fullName>
    <label>PCdisc</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>