force-app/main/default/objects/Web_Data__c/fields/PCemail__c.field-meta.xml
<CustomField>
    <fullName>PCemail__c</fullName>
    <label>PCemail</label>
    <length>250</length>
    <type>Text</type>
</CustomField>