force-app/main/default/objects/Web_Data__c/fields/PClic__c.field-meta.xml
<CustomField>
    <fullName>PClic__c</fullName>
    <label>PClic</label>
    <length>150</length>
    <type>Text</type>
</CustomField>