force-app/main/default/objects/Web_Data__c/fields/PClogo__c.field-meta.xml
<CustomField>
    <fullName>PClogo__c</fullName>
    <label>PClogo</label>
    <type>Url</type>
</CustomField>