force-app/main/default/objects/Web_Data__c/fields/PCMailingList__c.field-meta.xml
<CustomField>
    <fullName>PCMailingList__c</fullName>
    <description>Mailing list</description>
    <inlineHelpText>Mailing list</inlineHelpText>
    <label>PCMailingList</label>
    <type>Url</type>
</CustomField>