force-app/main/default/objects/Web_Data__c/fields/PCmes__c.field-meta.xml
<CustomField>
    <fullName>PCmes__c</fullName>
    <label>PCmes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>