force-app/main/default/objects/Web_Data__c/fields/PCname__c.field-meta.xml
<CustomField>
    <fullName>PCname__c</fullName>
    <label>PCname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>