force-app/main/default/objects/Web_Data__c/fields/PCphone__c.field-meta.xml
<CustomField>
    <fullName>PCphone__c</fullName>
    <label>PCphone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>