force-app/main/default/objects/Web_Data__c/fields/PCphoto__c.field-meta.xml
<CustomField>
    <fullName>PCphoto__c</fullName>
    <label>PCphoto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>