force-app/main/default/objects/Web_Data__c/fields/PCst__c.field-meta.xml
<CustomField>
    <fullName>PCst__c</fullName>
    <label>PCst</label>
    <length>250</length>
    <type>Text</type>
</CustomField>