force-app/main/default/objects/Web_Data__c/fields/PCtitle__c.field-meta.xml
<CustomField>
    <fullName>PCtitle__c</fullName>
    <label>PCtitle</label>
    <length>250</length>
    <type>Text</type>
</CustomField>