force-app/main/default/objects/Web_Data__c/fields/PCweb__c.field-meta.xml
<CustomField>
    <fullName>PCweb__c</fullName>
    <label>PCweb</label>
    <length>250</length>
    <type>Text</type>
</CustomField>