force-app/main/default/objects/Web_Data__c/fields/PCzip__c.field-meta.xml
<CustomField>
    <fullName>PCzip__c</fullName>
    <label>PCzip</label>
    <length>250</length>
    <type>Text</type>
</CustomField>