force-app/main/default/objects/Web_Data__c/fields/PRco__c.field-meta.xml
<CustomField>
    <fullName>PRco__c</fullName>
    <label>PRco</label>
    <length>250</length>
    <type>Text</type>
</CustomField>