force-app/main/default/objects/Web_Data__c/fields/PRdisc__c.field-meta.xml
<CustomField>
    <fullName>PRdisc__c</fullName>
    <label>PRdisc</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>