force-app/main/default/objects/Web_Data__c/fields/PRemail__c.field-meta.xml
<CustomField>
    <fullName>PRemail__c</fullName>
    <label>PRemail</label>
    <length>250</length>
    <type>Text</type>
</CustomField>