force-app/main/default/objects/Web_Data__c/fields/PRlogo__c.field-meta.xml
<CustomField>
    <fullName>PRlogo__c</fullName>
    <label>PRlogo</label>
    <type>Url</type>
</CustomField>