force-app/main/default/objects/Web_Data__c/fields/PRname__c.field-meta.xml
<CustomField>
    <fullName>PRname__c</fullName>
    <label>PRname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>