force-app/main/default/objects/Web_Data__c/fields/PROadd__c.field-meta.xml
<CustomField>
    <fullName>PROadd__c</fullName>
    <label>PROadd</label>
    <length>250</length>
    <type>Text</type>
</CustomField>