force-app/main/default/objects/Web_Data__c/fields/PROaltph__c.field-meta.xml
<CustomField>
    <fullName>PROaltph__c</fullName>
    <label>PROaltph</label>
    <length>250</length>
    <type>Text</type>
</CustomField>