force-app/main/default/objects/Web_Data__c/fields/PROb1__c.field-meta.xml
<CustomField>
    <fullName>PROb1__c</fullName>
    <label>PROb1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>