force-app/main/default/objects/Web_Data__c/fields/PROb2__c.field-meta.xml
<CustomField>
    <fullName>PROb2__c</fullName>
    <label>PROb2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>