force-app/main/default/objects/Web_Data__c/fields/PROb3__c.field-meta.xml
<CustomField>
    <fullName>PROb3__c</fullName>
    <label>PROb3</label>
    <length>250</length>
    <type>Text</type>
</CustomField>