force-app/main/default/objects/Web_Data__c/fields/PROcap10__c.field-meta.xml
<CustomField>
    <fullName>PROcap10__c</fullName>
    <label>PROcap10</label>
    <length>250</length>
    <type>Text</type>
</CustomField>